package com.keanu.software.seven.work1;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/12/3 10:34
 */
public abstract class Bird {
    protected FlyBehavior flyBehavior;

    public Bird() {

    }

    public abstract void display();
}
