package com.keanu.software.seven.work1;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/12/3 10:33
 */
public class FreeFly implements FlyBehavior {

    public FreeFly() {

    }

    @Override
    public void fly() {

    }
}
